--- a/tema-1/main.css
+++ b/tema-1/main.css
@@ -1,6 +1,36 @@
-h3{
+#name{
     color: green;
+    text-align: center;
 }
 h2{
     color:orange;
+    text-align: center;
+}
+p{
+    text-align: center;
+    color: orangered;
+}
+.imagine{
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+button{
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+    color:brown;
+    background-color: coral;
+}
+#my-id{
+    color: blueviolet;
+    font-size: 16px;
+    text-align: center;
+    background-color:orange;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
 }
