--- a/main.css
+++ b/main.css
@@ -22,21 +22,23 @@ p{
     align-content: center;
     flex-direction: column;
     text-align: center;
-    color:darkgrey;
     padding-left: 35%;
     padding-top: 35%;
     padding-right: 35%;
     padding-bottom: 35%;
- } 
- .flex-container a:hover {
+} 
+.flex-container a {
+    color:darkgrey;
+}
+.flex-container a:hover {
     color: black;
     background-color: grey;
- }
- .teme{
+}
+.teme {
     align-items: center;
     text-align: center;
- }
- a:link{
+}
+a:link {
     width: 400px;
     height: 300px;
     font-size: 30px;
@@ -44,4 +46,4 @@ p{
     text-align: center;
     text-decoration: none;
     display: inline-block;
- }
+}
