--- a/tema-2/main.css
+++ b/tema-2/main.css
@@ -12,7 +12,7 @@ p{
   border-radius: 50%;
   margin: 5px 0px 5px 5px;
   max-width: 10%;
-  display: block;
+  display: inline;
   float: left;
 }
 .elements{
@@ -40,7 +40,6 @@ td{
   font-family: Arial, Helvetica, sans-serif;
 }
 .role{
-  font-style: italic;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -55,19 +54,11 @@ td{
 ul{
   padding-left: 2%;
 }
-src.details{
-  border-radius: 50%;
-  max-width: 5%;
-  display: block;
-  float: left;
-}
 .edu{
   font-weight: bolder;
-  font-style: italic;
   font-family: Arial, Helvetica, sans-serif;
 }
 .studying{
   font-style: italic;
   font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
 }
