--- a/tema-11/calendar.css
+++ b/tema-11/calendar.css
@@ -25,7 +25,7 @@
     background-color: #222227;
     box-shadow: 0 0.5rem 3rem rgba(0, 0, 0, 0.4);
   }
-  .title{
+/*.title{
     flex-wrap: wrap;
     display: flex;
     text-align: center;
@@ -34,7 +34,7 @@
     font-size:x-large;
     text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
     padding: 7% 0 0 0;
-  }
+  }*/
   .month {
     width: 100%;
     height: 12rem;
